--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ typing_extensions==4.15.0
 urllib3==2.6.3
 uvicorn==0.39.0
 yarl==1.22.0
-SQLAlchemy>=2.0
 reportlab
 python-multipart
+SQLAlchemy>=2.0
+psycopg2-binary
